--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,8 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-     - platform-tools
-     - tools
-
-  script:
-     - ./gradlew build connectedCheck
+    - platform-tools
+    - tools
 
     # The BuildTools version used by your project
     - build-tools-23.0.2
@@ -17,7 +14,7 @@ android:
     - android-23
 
     # Additional components
-
+    - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-19
